# fastText_dnn

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: CMakeLists.txt  annoy  args.cc  args.h  dictionary.cc  dictionary.h  fasttext.cc  fasttext.h  fasttext_api.cc  fasttext_api.h  matrix.cc  matrix.h  mockmain.cc  model.cc  model.h  vector.cc  vector.h
tests/: CMakeLists.txt  lsh_benchmark.cc  test_fasttext_api.cc  test_nn.cc  test_nnlabels.cc  test_similarity.cc  test_similarity_mean.cc  xcbow_benchmark.cc
utils/: CMakeLists.txt  dump_nnlabels.cc
